# solottie

./: .gitignore  .prettierignore  Anchor.toml  README.md  oracle.ts  package.json
.github/workflows/: ci-anchor.yaml  docs.yaml  verified.yaml
app/: .env  .eslintrc.json  LICENSE  README.md  next.config.js  package.json  tailwind.config.js
app/public/assets/ticket/: metadata.json
app/src/components/: AppBar.tsx  Card.tsx  CloseLottery.tsx  ContentContainer.tsx  CountdownWheel.tsx  CreateLottery.tsx  CreateLotteryForm.tsx  Footer.tsx  LotteryPoolCard.tsx  LotteryPoolList.tsx  LotteryStatus.tsx  MintBsol.tsx  Modal.tsx  NetworkSwitcher.tsx  Notification.tsx  RequestAirdrop.tsx  SendTransaction.tsx  SendVersionedTransaction.tsx  Settle.tsx  SignMessage.tsx  Stake.tsx  StakeCard.tsx  Start.tsx  TokenInput.tsx  Unstake.tsx
app/src/components/Text/: index.tsx
app/src/config/: index.ts
app/src/contexts/: ContextProvider.tsx
app/src/core/: getAllLotteryPools.ts  getLotteryPool.ts  getLotteryPoolIds.ts  index.ts
app/src/hooks/: useAnchorProvider.ts  useTokenBalance.ts
app/src/models/: lottie.ts
app/src/pages/: _app.tsx  basics.tsx  index.tsx
app/src/program/: programId.ts
app/src/styles/: globals.css
app/src/utils/: index.tsx
app/src/views/: index.tsx
programs/lottie/: Cargo.toml
programs/lottie/src/: constants.rs  error.rs  lib.rs  utils.rs
programs/lottie/src/instructions/: close_pool.rs  create_pool.rs  mod.rs  settle.rs  stake.rs  start.rs  unstake.rs
programs/lottie/src/state/: lottery_pool.rs  mod.rs  pool_config.rs
tests/: lottie.ts
(+21 files in other folders)
