[package]
name = "lottie"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lottie"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features=["init-if-needed"]}
anchor-spl = "0.28.0"
switchboard-solana = "0.28.4"
mpl-token-metadata = { version = "2.0.0-beta.1", features=["no-entrypoint"] }
